# winLoadXRAY

./: .gitattributes  .gitignore  KODA.md  TASK.md  fast_tooltips.py  pyproject.toml  requirements.txt  setup.py  ui_enhancement.py  ui_themes.py  winLoadXRAY.py
.github/: dependabot.yml
.github/workflows/: build_ver.yaml
func/: configXray.py  copyPast.py  parsing.py  tun2proxy.py
tools/: DEPENDENCIES.md  FAST_TOOLTIPS_GUIDE.md  GITIGNORE_GUIDE.md  GIT_SETUP.md  PROJECT_SUMMARY.md  Pipfile  TOOLTIPS_SUCCESS.md  UI_IMPROVEMENTS.md  UI_SUMMARY.md  environment.yml  requirements-exact.txt  run_modern_ui.bat  setup_env.bat  theme_demo.py  tooltip_demo.py  tooltip_settings.py  winLoadXRAY-old.py
